--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,5 @@
+/* Classe para arrumar a section dos países pro BOOTSTRAP 4 */
+
 .dropdown-toggle.btn-default {
     color: #292b2c;
     background-color: #fff;
