--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,10 +3,26 @@
 <body>
     <div class="container">
 
-        <select id="countrypicker" onchange="catchD()" class="selectpicker countrypicker mt-5" data-default="BR"></select>
-        <canvas id="myChart" class="mt-5" style="position: relative; height:60vh; width:80vw"></canvas>
+        <select id="countrypicker" onchange="catchD()" class="selectpicker countrypicker mt-5"
+            data-default="BR"></select>
+
+        <div class="card mt-2">
+            <div class="card-body">
+                <canvas id="myChart" class="mt-5" style="position: relative; height:60vh; width:80vw"></canvas>
+            </div>
+            <div class="card-footer text-muted text-center">
+                Fique em quarentena, tome cuidado e não saia de casa pela sua própria saúde ~Micael
+                <a href="https://twitter.com/MicaelEffects"><i class="fab fa-twitter ml-3 mt-2"></i></a>
+                <a href="github.com/Micazera"><i class="fab fa-github"></i></a>
+                <a href="instagram.com/micagomes.js/"><i class="fab fa-instagram"></i></a>
+            </div>
+
+        </div>
 
     </div>
+    <footer>
+
+    </footer>
 
 </body>
 
