--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,19 +22,18 @@
             </div>
         </div>
 
-        <div class="toast mt-3 mr-3" role="alert" aria-live="assertive" aria-atomic="true" data-delay="5000"
+        <div id="toasthome" class="toast mt-3 mr-3" role="alert" aria-live="assertive" aria-atomic="true" data-delay="5000"
             data-autohide="true" style="position: absolute; top: 0; right: 0;">
 
-            <div class="toast-header bg-success">
-                <strong class="mr-auto text-white">Algo de bom!</strong>
+            <div class="toast-header bg-danger">
+                <strong class="mr-auto text-white">Lamentamos, ocorreu um erro</strong>
                 <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
                 
             </div>
-
             <div class="toast-body">
-                Este país não possui casos no momento, comemore por eles!
+                Este país não possui casos no momento.
             </div>
         </div>
 
