Futura feature: bandeira do país.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,6 +11,7 @@
         <div class="card mt-2">
 
             <div class="card-body">
+                <img id="img-pais" src="https://www.countryflags.io/br/flat/64.png" class="float-right">
                 <canvas id="myChart" class="mt-5" style="position: relative; height:60vh; width:80vw"></canvas>
             </div>
 
