--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,18 +20,19 @@
                 <a href="https://twitter.com/MicaelEffects"><i class="fab fa-twitter ml-3 mt-2"></i></a>
                 <a href="https://github.com/Micazera"><i class="fab fa-github"></i></a>
                 <a href="https://instagram.com/micagomes.js/"><i class="fab fa-instagram"></i></a>
+                <a href="https://instagram.com/micagomes.js/"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
 
-        <div id="toasthome" class="toast mt-3 mr-3" role="alert" aria-live="assertive" aria-atomic="true" data-delay="5000"
-            data-autohide="true" style="position: absolute; top: 0; right: 0;">
+        <div id="toasthome" class="toast mt-3 mr-3" role="alert" aria-live="assertive" aria-atomic="true"
+            data-delay="5000" data-autohide="true" style="position: absolute; top: 0; right: 0;">
 
             <div class="toast-header bg-danger">
                 <strong class="mr-auto text-white">Lamentamos, ocorreu um erro</strong>
                 <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                
+
             </div>
             <div class="toast-body">
                 Este país não possui casos no momento.
