--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
         type="text/css" />
     <link rel="stylesheet" href="//unpkg.com/bootstrap-select-country@4.0.0/dist/css/bootstrap-select-country.min.css"
         type="text/css" />
-
+    <link rel="icon" type="image/x-icon" href="/img/coronavirus.png">
     <link rel="stylesheet" href="/css/style.css">
 
 
