--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,7 +45,7 @@ body {
 }
 
 .dropdown-menu>li.active>a {
-    color: black !important;
+    color: #f1f1f1 !important;
     background-color: #337ab7 !important;
 }
 
