--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,8 +12,8 @@
         <div class="card mt-2">
             <div class="card-body">
 
-                <img id="img-pais" width="64px" height="64px" src="https://www.countryflags.io/br/flat/64.png"
-                    class="float-right">
+                <img id="img-pais" width="128px" height="128px" src="https://www.countryflags.io/br/flat/64.png"
+                    class="float-right" style="border: 5px solid black;">
 
                 <canvas id="myChart" class="mt-5"></canvas>
 
