--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,11 +9,11 @@
             data-default="BR"></select>
 
         <!--Card do gráfico-->
-        <div class="card mt-2">
+        <div class="card mt-2" style="background-color: #1f1f31;">
             <div class="card-body">
 
                 <img id="img-pais" width="64px" height="64px" src="https://www.countryflags.io/br/flat/64.png"
-                    class="float-right" style="border: 1px solid black;">
+                    class="float-right">
 
                 <canvas id="myChart" class="mt-5"></canvas>
 
