--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,8 +9,8 @@ body {
 }
 
 .dropdown-toggle.btn-default {
-    color: #292b2c;
-    background-color: #fff;
+    color: #fff;
+    background-color: #373757;
     border-color: #ccc;
 }
 
