--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
             data-default="BR"></select>
 
         <!--Card do gráfico-->
-        <div class="card mt-2" style="background-color: #373757; color: white;">
+        <div class="card mt-2" style="background-color: #373757;">
             <div class="card-body">
 
                 <img id="img-pais" width="64px" height="64px" src="https://www.countryflags.io/br/flat/64.png"
@@ -19,7 +19,7 @@
 
             </div>
 
-            <div class="card-footer text-muted text-center">
+            <div class="card-footer text-muted text-center text-white">
                 Fique em quarentena, tome cuidado e não saia de casa pela sua própria saúde ~Micael
                 <a href="https://twitter.com/MicaelEffects"><i class="fab fa-twitter ml-3 mt-2"></i></a>
                 <a href="https://github.com/Micazera"><i class="fab fa-github"></i></a>
