--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,8 +19,8 @@
 
             </div>
 
-            <div class="card-footer text-muted text-center text-white">
-                Fique em quarentena, tome cuidado e não saia de casa pela sua própria saúde ~Micael
+            <div class="card-footer text-muted text-center">
+                <p style="color: white;">Fique em quarentena, tome cuidado e não saia de casa pela sua própria saúde ~Micael</p>
                 <a href="https://twitter.com/MicaelEffects"><i class="fab fa-twitter ml-3 mt-2"></i></a>
                 <a href="https://github.com/Micazera"><i class="fab fa-github"></i></a>
                 <a href="https://instagram.com/micagomes.js/"><i class="fab fa-instagram"></i></a>
