--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,7 +28,8 @@ body {
     padding: 2px 1.3rem;
     clear: both;
     font-weight: 400;
-    color: #292b2c;
+    color: white;
+    background-color: #373757;
     text-align: inherit;
     white-space: nowrap;
     background: 0 0;
