--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,7 +40,7 @@ body {
 }
 
 .bootstrap-select>.dropdown-menu>.dropdown-menu li a:hover {
-    background-color: #f4f4f4;
+    background-color: #373757;
 }
 
 .bootstrap-select>.dropdown-toggle {
