--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,10 +6,10 @@
     <div class="container">
 
         <select id="countrypicker" onchange="catchD()" class="selectpicker countrypicker mt-5"
-            data-default="BR"></select>
+            data-default="BR" style="border-radius: 20px;"></select>
 
         <!--Card do gráfico-->
-        <div class="card mt-2" style="background-color: #373757; border-radius: 30px;">
+        <div class="card mt-2" style="background-color: #373757; border-radius: 20px;">
             <div class="card-body">
 
                 <img id="img-pais" width="64px" height="64px" src="https://www.countryflags.io/br/flat/64.png"
