--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,10 +6,10 @@
     <div class="container">
 
         <select id="countrypicker" onchange="catchD()" class="selectpicker countrypicker mt-5"
-            data-default="BR" style="border-radius: 20px;"></select>
+            data-default="BR"></select>
 
         <!--Card do gráfico-->
-        <div class="card mt-2" style="background-color: #373757; border-radius: 20px;">
+        <div class="card mt-2" style="background-color: #373757; border-radius: 10px;">
             <div class="card-body">
 
                 <img id="img-pais" width="64px" height="64px" src="https://www.countryflags.io/br/flat/64.png"
@@ -20,7 +20,8 @@
             </div>
 
             <div class="card-footer text-muted text-center">
-                <p style="color: white;">Fique em quarentena, tome cuidado e não saia de casa pela sua própria saúde ~Micael</p>
+                <p style="color: white;">Fique em quarentena, tome cuidado e não saia de casa pela sua própria saúde
+                    ~Micael</p>
                 <a href="https://twitter.com/MicaelEffects"><i class="fab fa-twitter ml-3 mt-2"></i></a>
                 <a href="https://github.com/Micazera"><i class="fab fa-github"></i></a>
                 <a href="https://instagram.com/micagomes.js/"><i class="fab fa-instagram"></i></a>
