--- a/views/home.ejs
+++ b/views/home.ejs
@@ -33,14 +33,14 @@
             data-delay="5000" data-autohide="true" style="position: absolute; top: 0; right: 0;">
 
             <div class="toast-header bg-danger">
-                <strong class="mr-auto text-white">Lamentamos, ocorreu um erro</strong>
+                <strong class="mr-auto text-white">Lamentamos, ocorreu um erro.</strong>
                 <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
 
             </div>
             <div class="toast-body">
-                Este país não possui casos no momento.
+                Este país não possui dados informados.
             </div>
         </div>
 
