--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
         type="text/css" />
     <link rel="icon" type="image/x-icon" href="/img/coronavirus.png">
     <link rel="stylesheet" href="/css/style.css">
-
+    <link rel="stylesheet" href="/css/dropdown.css">
 
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
