atualizando o design e reagrupando as classes css

--- a/public/css/dropdown.css
+++ b/public/css/dropdown.css
@@ -1,3 +1,5 @@
+/* Classe para arrumar a section dos países pro BOOTSTRAP 4 */
+
 .dropdown-toggle.btn-default {
     color: #fff;
     background-color: #373757;
