--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,6 +8,8 @@
         <select id="countrypicker" onchange="catchD()" class="selectpicker countrypicker mt-5"
             data-default="BR"></select>
 
+        <button class="float-right mt-5">Comparar</button>
+
         <!--Card do gráfico-->
         <div class="card cardstyle mt-2">
             <div class="card-body">
