--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
         <select id="countrypicker" onchange="catchD()" class="selectpicker countrypicker mt-5"
             data-default="BR"></select>
 
-        <button class="float-right mt-5">Comparar</button>
+        <button class="btn btn-success float-right mt-5">Comparar <i class="fas fa-exchange-alt"></i></button>
 
         <!--Card do gráfico-->
         <div class="card cardstyle mt-2">
