--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,12 +5,13 @@
 
     <div class="container">
 
-        <select id="countrypicker" onchange="catchD()" class="selectpicker countrypicker mt-5"
-            data-default="BR"></select>
+        <section>
+            <select id="countrypicker" onchange="catchD()" class="selectpicker countrypicker mt-5"
+                data-default="BR"></select>
 
-        <button class="btn btn-success float-right mt-5">Comparar com &nbsp; <i class="fas fa-exchange-alt"></i> <select
-                class="selectpicker countrypicker mt-5" data-default="BR"></select></button>
-
+            <button class="btn btn-success float-right mt-5">Comparar com &nbsp; <i class="fas fa-exchange-alt"></i>
+                &nbsp;&nbsp; <select class="selectpicker countrypicker mt-5" data-default="BR"></select></button>
+        </section>
         <!--Card do gráfico-->
         <div class="card cardstyle mt-2">
             <div class="card-body">
