--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,17 +1,16 @@
 <%- include('partials/header.ejs') %>
 
 <body>
-
-
     <div class="container">
 
-        <section>
+        <section style="margin-bottom: 10px; width: 300px; height: 100px;">
             <select id="countrypicker" onchange="catchD()" class="selectpicker countrypicker mt-5"
                 data-default="BR"></select>
 
             <button class="btn btn-success float-right mt-5">Comparar com &nbsp; <i class="fas fa-exchange-alt"></i>
                 &nbsp;&nbsp; <select class="selectpicker countrypicker mt-5" data-default="BR"></select></button>
         </section>
+
         <!--Card do gráfico-->
         <div class="card cardstyle mt-2">
             <div class="card-body">
