--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,9 @@
                 data-default="BR"></select>
 
             <button class="btn btn-success float-right mt-5">Comparar com &nbsp; <i class="fas fa-exchange-alt"></i>
-                &nbsp;&nbsp; <select class="selectpicker countrypicker mt-5" data-default="BR"></select></button>
+                <br>
+                <select class="selectpicker countrypicker mt-5" data-default="EUA"></select>
+            </button>
         </section>
 
         <!--Card do gráfico-->
