--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,8 +7,7 @@
             <select id="countrypicker" onchange="catchD()" class="selectpicker countrypicker mt-5"
                 data-default="BR"></select>
 
-            <button class="btn btn-success float-right mt-5">Comparar com &nbsp; <i class="fas fa-exchange-alt"></i>
-                <br>
+            <button class="btn btn-success float-right mt-5" style="max-height: 50px;">Comparar com &nbsp; <i class="fas fa-exchange-alt"></i>
                 <select class="selectpicker countrypicker mt-5" data-default="EUA"></select>
             </button>
         </section>
