--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,9 +7,12 @@
             <select id="countrypicker" onchange="catchD()" class="selectpicker countrypicker mt-5"
                 data-default="BR"></select>
 
-            <button class="btn btn-success float-right mt-5" style="max-height: 50px;">Comparar com &nbsp; <i class="fas fa-exchange-alt"></i>
-                <select class="selectpicker countrypicker mt-5" data-default="EUA"></select>
-            </button>
+            <section class="float-right">
+                <button class="btn btn-success mt-5" style="max-height: 50px;">Comparar com &nbsp; <i
+                        class="fas fa-exchange-alt"></i>
+                </button>
+                <select class="selectpicker countrypicker mt-5 " data-default="BR"></select>
+            </section>
         </section>
 
         <!--Card do gráfico-->
