--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 <body>
     <div class="container">
 
-        <section style="margin-bottom: 10px; width: 300px; height: 100px;">
+        <section style="margin-bottom: 10px;">
             <select id="countrypicker" onchange="catchD()" class="selectpicker countrypicker mt-5"
                 data-default="BR"></select>
 
