--- a/public/css/dropdown.css
+++ b/public/css/dropdown.css
@@ -1,5 +1,9 @@
 /* Classe para arrumar a section dos países pro BOOTSTRAP 4 */
 
+.compareselect {
+    border: 1px solid #2aa547 !important;
+}
+
 .dropdown-toggle.btn-default {
     color: #fff;
     background-color: #373757;
