--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,8 +11,7 @@
                 <button class="btn btn-success mt-5" style="max-height: 50px;">Comparar com &nbsp; <i
                         class="fas fa-exchange-alt"></i>
                 </button>
-                <select class="selectpicker countrypicker mt-5" style="border: 1px 1px 1px 1px solid #2aa547;"
-                    data-default="BR"></select>
+                <select class="selectpicker countrypicker compareselect mt-5" data-default="BR"></select>
             </section>
         </section>
 
