--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,8 +8,8 @@
                 data-default="BR"></select>
 
             <section class="float-right">
-                <button class="btn btn-success mt-5" style="max-height: 50px;  border: 5px solid #2aa547">Comparar com
-                    &nbsp; <i class="fas fa-exchange-alt"></i>
+                <button class="btn btn-success mt-5" style="max-height: 50px;"> Comparar com
+                    &nbsp; <i class=" fas fa-exchange-alt"></i>
                 </button>
                 <select class="selectpicker countrypicker compareselect mt-5" data-default="BR"></select>
             </section>
