--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,10 +8,10 @@
                 data-default="BR"></select>
 
             <section class="float-right">
-                <button class="btn btn-success mt-5" style="max-height: 50px;"> Comparar com
+                <button class="btn btn-success mt-5" style="max-height: 50px;" disabled> Comparar com
                     &nbsp; <i class=" fas fa-exchange-alt"></i>
                 </button>
-                <select class="selectpicker countrypicker compareselect mt-5" data-default="BR"></select>
+                <select class="selectpicker countrypicker mt-5" data-default="BR"></select>
             </section>
         </section>
 
