atualizando funções clássicas para arrow functions e renomeando as mesmas para melhor legibilidade

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
     <div class="container">
 
         <section style="margin-bottom: 15px;">
-            <select id="countrypicker" onchange="catchD()" class="selectpicker countrypicker mt-5"
+            <select id="countrypicker" onchange="getPickersInfo()" class="selectpicker countrypicker mt-5"
                 data-default="BR"></select>
 
             <section class="float-right">
