--- a/public/css/dropdown.css
+++ b/public/css/dropdown.css
@@ -51,7 +51,7 @@
     display: inline !important;
 }
 
-.bootstrap-select button:focus {
-    outline: none;
+.bootstrap-select a:focus {
+    outline: none!important;
     border: 0;
 }
